<resources>
    <string name="app_name">JobHunter</string>
    <string name="title_search">Поиск</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_responses">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="filters_button_desc">Search filters</string>
    <string name="search_icon_desc">search icon</string>
    <string name="search_field_text">Должность, ключевые слова</string>
    <string name="relevant_vacancies">Должность по подходящим вакансиям</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="is_favourite_vacancy_desc">is favourite vacancy</string>
    <string name="respond">Откликнуться</string>
    <string name="published_date">Опубликовано %s</string>
    <string name="vacancy_title">Вакансия</string>
    <string name="relevant">По соответствию</string>
    <string name="visible_vacancy">Показать / скрыть вакансию</string>
    <string name="share_vacancy">Поделиться вакансией</string>
    <string name="like_vacancy">Лайкнуть вакансию</string>
    <string name="experience">Требуемый опыт: %s</string>
    <string name="your_responsibilities">Ваши задачи</string>
    <string name="ask_employer">Задайте вопрос работодателю</string>
    <string name="ask_employer_desc">Он получит его с откликом на вакансию</string>
    <string name="resume_for_respond">Резюме для отклика</string>
    <string name="vacancy_designer">UI/UX дизайнер</string>
    <string name="add_cover_letter">Добавить сопроводительное</string>
    <string name="your_cover_letter">Ваше сопроводительное письмо</string>
    <string name="job_hunting">Поиск работы</string>
    <string name="email_hint">Электронная почта или телефон</string>
    <string name="enter_with_password">Войти с паролем</string>
    <string name="proceed">Продолжить</string>
    <string name="employees_search">Поиск сотрудников</string>
    <string name="employees_search_text">Я ищу сотрудников</string>
    <string name="employees_search_desc">Размещение вакансий и доступ к базе резюме</string>
    <string name="entry_title">Вход в личный кабинет</string>
    <string name="invalid_email_exception">Вы ввели неверный e-mail</string>
    <string name="code">Код</string>
    <string name="send_code_to_email">Отправили код на %s</string>
    <string name="send_code_to_email_desc">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="submit">Подтвердить</string>

    <plurals name="more_vacancies">
        <item quantity="zero">Ещё %d вакансий</item>
        <item quantity="one">Ещё %f вакансия</item>
        <item quantity="few">Ещё %d вакансии</item>
        <item quantity="many">Ещё %d вакансий</item>
    </plurals>
    <plurals name="looking_number_1">
        <item quantity="zero">Сейчас просматривает %d человек</item>
        <item quantity="one">Сейчас просматривает %d человек</item>
        <item quantity="few">Сейчас просматривают %d человека</item>
        <item quantity="many">Сейчас просматривают %d человек</item>
    </plurals>
    <plurals name="looking_number_2">
        <item quantity="one">%d человек сейчас смотрит</item>
        <item quantity="few">%d человека сейчас смотрят</item>
        <item quantity="many">%d человек сейчас смотрят</item>
    </plurals>
    <plurals name="vacancies_count">
        <item quantity="zero">%d вакансий</item>
        <item quantity="one">%d вакансия</item>
        <item quantity="two">%d вакансии</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
    </plurals>
    <plurals name="applied_number">
        <item quantity="one">%d человек уже откликнулся</item>
        <item quantity="few">%d человека уже откликнулись</item>
        <item quantity="many">%d человек уже откликнулись</item>
    </plurals>
</resources>