<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_search"
        android:icon="@drawable/icon_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/fragment_favourites"
        android:icon="@drawable/icon_favourite"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/fragment_responses"
        android:icon="@drawable/icon_responses"
        android:title="@string/title_responses" />

    <item
        android:id="@+id/fragment_messages"
        android:icon="@drawable/icon_message"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />

</menu>