<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_visibility"
        android:title="@string/visible_vacancy"
        android:icon="@drawable/icon_visibility"
        app:showAsAction="ifRoom"
        android:enabled="false"
        />

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share_vacancy"
        android:icon="@drawable/icon_share"
        app:showAsAction="ifRoom"
        android:enabled="false"
        />

    <item
        android:id="@+id/menu_item_like"
        android:title="@string/like_vacancy"
        android:icon="@drawable/icon_favourite"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:enabled="false"
        />
</menu>