<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_search">

    <fragment
        android:id="@+id/fragment_search"
        android:name="com.jobhunter.app.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/show_vacancy_details_action"
            app:destination="@id/fragment_vacancy_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popUpTo="@id/fragment_search" />
        <action
            android:id="@+id/show_relevant_vacancies_action"
            app:destination="@id/fragment_relevant_vacancies"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/fragment_search"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_relevant_vacancies"
        android:name="com.jobhunter.app.ui.relevant.RelevantVacanciesFragment"
        android:label="@string/vacancies_for_you"
        tools:layout="@layout/fragment_relevant_vacancies"
        >
        <action
            android:id="@+id/show_vacancy_details_action"
            app:destination="@id/fragment_vacancy_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/fragment_relevant_vacancies" />
    </fragment>

    <fragment
        android:id="@+id/fragment_favourites"
        android:name="com.jobhunter.app.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/show_vacancy_details_action"
            app:destination="@id/fragment_vacancy_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popUpTo="@id/fragment_favourites" />
    </fragment>

    <fragment
        android:id="@+id/fragment_responses"
        android:name="com.jobhunter.app.ui.responses.ResponsesFragment"
        android:label="@string/title_responses"
        tools:layout="@layout/fragment_responses" />

    <fragment
        android:id="@+id/fragment_messages"
        android:name="com.jobhunter.app.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages"/>

    <fragment
        android:id="@+id/fragment_profile"
        android:name="com.jobhunter.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"
        />

    <fragment
        android:id="@+id/fragment_vacancy_details"
        android:name="com.jobhunter.app.ui.vacancy.VacancyDetailsFragment"
        android:label="@string/vacancy_title"
        tools:layout="@layout/fragment_vacancy_details"
        >
        <argument
            android:name="vacancyId"
            app:argType="string" />
    </fragment>
</navigation>