<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/entry_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="2dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_title"
            android:textAppearance="@style/Title2"
            app:fontFamily="@font/sf_pro_display_semibold"
            android:textColor="@color/white"
            android:gravity="start"
            android:lineHeight="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/entry_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/job_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/entry_item_bg"
            android:paddingVertical="24dp"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/job_hunt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_hunting"
                android:textAppearance="@style/Title3"
                app:fontFamily="@font/sf_pro_display_medium"
                android:lineHeight="19sp"
                android:gravity="start"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:drawableStart="@drawable/icon_responses"
                android:paddingHorizontal="8dp"
                android:drawablePadding="8dp"
                android:maxLines="1"
                android:hint="@string/email_hint"
                android:textAppearance="@style/Text1"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:textColorHint="@color/grey4"
                app:layout_constraintTop_toBottomOf="@id/job_hunt_title"
                android:layout_marginTop="16dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_error_message"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:textAppearance="@style/Text1"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textColor="@color/red"
                android:lineHeight="18sp"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text"
                />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/email_error_message"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/proceed_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button_8dp_corners"
                    android:textAppearance="@style/Button2"
                    android:text="@string/proceed"
                    android:textColor="@color/white"
                    android:lineHeight="18sp"
                    android:enabled="false"
                    />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="match_parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/enter_with_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/blue"
                    android:text="@string/enter_with_password"
                    android:textAppearance="@style/Button2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/entry_item_bg"
            android:paddingVertical="24dp"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employees_search_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employees_search"
                android:textAppearance="@style/Title3"
                app:fontFamily="@font/sf_pro_display_medium"
                android:lineHeight="19sp"
                android:gravity="start"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employees_search_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employees_search_desc"
                android:textAppearance="@style/Text1"
                android:lineHeight="19sp"
                android:gravity="start"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/employees_search_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search_employees_button"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/green_button_16dp_corners_bg"
                android:textAppearance="@style/Button2"
                android:text="@string/employees_search_text"
                android:textColor="@color/white"
                android:lineHeight="18sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/employees_search_desc"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>